# resupy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ensure-pre-commit.yml
resupy/: __init__.py  _load_resume_data.py  _resolve_image_path.py  create_resume.py  exceptions.py
resupy/resume_data/: __init__.py  _jsonresume_wrapper.py  award.py  basics.py  certificate.py  education.py  interest.py  language.py  location.py  profile.py  project.py  publication.py  reference.py  resume_basics.py  resume_data.py  skill.py  volunteer.py  work.py
resupy/templates/: __init__.py  template_abc.py
resupy/templates/coruscant/: __init__.py  coruscant.py  index.html  style.css
tests/: test_load_resume_data.py  test_resolve_image_path.py
tests/resume_data/: test_jsonresume_wrapper.py
